# splat_challenges

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  Rocket.toml  TODO.md  bootstrap.sh
migrations/2019-03-19-233036_init_db/: up.sql
src/: challenge.rs  errors.rs  main.rs  schema.rs
src/tests/: challenge_api.rs  mod.rs
