[package]
name = "splat_challenges"
version = "0.1.0"
authors = ["Dan Herrera <sonarius@shew.io>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
parking_lot = { version = "0.6", features = ["nightly"] }
test-case-derive = "0.2.1"

[dependencies.rocket_contrib]
version = "0.4.0"
default_features = false
features = ["diesel_sqlite_pool", "json"]
